--- a/teachers.html
+++ b/teachers.html
@@ -1,225 +1,254 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>نظام OMA - إدارة الأساتذة</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>👨‍🏫 إدارة الأساتذة - نظام OMA</title>
 <style>
-:root{
-  --primary:#004aad;
-  --accent:#ffcc33;
-  --bg:#f5f9ff;
-  --card:#fff;
-}
-*{box-sizing:border-box}
-body{
-  font-family:'Cairo',sans-serif;
-  margin:0;
-  background:linear-gradient(180deg,var(--bg),#fff);
-  color:#102027;
-  direction:rtl;
-  visibility:hidden;
-}
-header{
-  background:linear-gradient(90deg,var(--primary),#007bff);
-  color:#fff;
-  padding:18px 16px;
-  text-align:center;
-  font-size:20px;
-  font-weight:700;
-  box-shadow:0 3px 12px rgba(2,20,40,0.08);
-}
-.wrap{max-width:1200px;margin:22px auto;padding:12px;}
-.card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 18px rgba(6,20,30,0.06);}
-.form-grid{display:flex;flex-wrap:wrap;gap:10px}
-input[type="text"], input[type="tel"], input[type="number"], select{
-  padding:10px;
-  border:1px solid #d6dde9;
-  border-radius:8px;
-  font-size:15px;
-  width:100%;
-}
-.two{width:calc(50% - 6px)}
-label{display:block;margin-bottom:6px;font-size:13px;color:#37474f}
-.btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700}
-.btn.warn{background:#ff7043}
-.btn.ghost{background:transparent;color:var(--primary);border:1px solid rgba(0,74,173,0.12)}
-.btn.small{padding:6px 8px;font-size:13px;border-radius:6px}
-.add-subj{display:inline-block;margin-top:6px}
-table{width:100%;border-collapse:collapse;margin-top:12px}
-th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px}
-th{background:var(--primary);color:#fff}
-.actions button{margin:0 6px}
-.badge{display:inline-block;padding:4px 8px;border-radius:999px;background:#eef6ff;color:var(--primary);font-weight:700}
-.modal { position:fixed; left:0; top:0; right:0; bottom:0; background:rgba(0,0,0,0.45); display:none; align-items:center; justify-content:center; z-index:9999;}
-.modal.open{display:flex}
-.modal .box{background:white;padding:18px;border-radius:10px;max-width:900px;width:94%;max-height:90vh;overflow:auto}
-.flex{display:flex;gap:10px;align-items:center}
-@media print{
-  body{background:white;padding:0;}
-  header,.card .form-grid,.actions,.modal,.btn{display:none !important;}
-  table{page-break-inside:avoid;}
-}
+  body {
+    font-family: 'Cairo', sans-serif;
+    background: #f5f9ff;
+    margin: 0;
+    padding: 0;
+  }
+  header {
+    background-color: #004aad;
+    color: white;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 22px;
+    font-weight: bold;
+  }
+  .container {
+    padding: 20px;
+    max-width: 1100px;
+    margin: auto;
+  }
+  form {
+    background: white;
+    padding: 25px;
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    margin-bottom: 30px;
+  }
+  form h3 {
+    margin-top: 0;
+    color: #004aad;
+    text-align: center;
+  }
+  input, select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 15px;
+  }
+  button {
+    background: #004aad;
+    color: white;
+    border: none;
+    padding: 12px 18px;
+    border-radius: 8px;
+    cursor: pointer;
+    font-size: 15px;
+    transition: 0.3s;
+  }
+  button:hover {
+    background: #003580;
+  }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    background: white;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+  }
+  th, td {
+    padding: 10px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+  }
+  th {
+    background: #004aad;
+    color: white;
+  }
+  tr:hover {
+    background: #eef4ff;
+  }
+  .actions button {
+    margin: 2px;
+  }
+  .print-btn {
+    background: #ffcc33;
+    color: #222;
+  }
+  .delete-btn {
+    background: #d32f2f;
+  }
+  .edit-btn {
+    background: #007bff;
+  }
+  .filters {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 20px;
+  }
 </style>
 </head>
 <body>
-<header>نظام OMA - إدارة الأساتذة</header>
-<div class="wrap">
+  <header>👨‍🏫 إدارة الأساتذة</header>
 
-<div class="card" style="display:flex;gap:12px;flex-wrap:wrap;">
-  <!-- نصف الاستمارة -->
-  <div style="flex:1;min-width:320px;">
-    <strong>استمارة أستاذ</strong>
-    <form id="teacherForm" style="margin-top:12px">
-      <div class="form-grid">
-        <div class="two">
-          <label>الاسم الكامل</label>
-          <input id="tName" type="text" required />
-        </div>
-        <div class="two">
-          <label>رقم الهاتف</label>
-          <input id="tPhone" type="tel" required />
-        </div>
-        <div style="width:100%">
-          <label>المواد التي يدرسها</label>
-          <div id="tSubjectsContainer" style="display:flex;flex-wrap:wrap;gap:8px"></div>
-          <button type="button" id="addTSubjectBtn" class="btn ghost small add-subj">➕ إضافة مادة</button>
-        </div>
-        <div class="two">
-          <label>المراحل الدراسية</label>
-          <input id="tStages" type="text" placeholder="مثال: المرحلة1, المرحلة2" />
-        </div>
-        <div class="two">
-          <label>المجموعات / الكروبات</label>
-          <input id="tGroups" type="text" placeholder="مثال: A, B, 101" />
-        </div>
-        <div style="width:100%;display:flex;gap:8px;justify-content:flex-end;margin-top:8px">
-          <button type="submit" class="btn">✅ حفظ الأستاذ</button>
-          <button type="button" id="clearTFormBtn" class="btn ghost">مسح الحقول</button>
-        </div>
-      </div>
+  <div class="container">
+    <form id="addTeacherForm">
+      <h3>➕ إضافة أستاذ جديد</h3>
+      <input type="text" id="teacherName" placeholder="اسم الأستاذ" required />
+      <input type="text" id="subject" placeholder="المادة الدراسية" required />
+      <input type="tel" id="phone" placeholder="رقم الهاتف" required />
+      <input type="text" id="address" placeholder="العنوان" />
+      <select id="stage" required>
+        <option value="">اختر المرحلة</option>
+        <option>الابتدائية</option>
+        <option>المتوسطة</option>
+        <option>الاعدادية - علمي</option>
+        <option>الاعدادية - أدبي</option>
+      </select>
+      <button type="submit">💾 حفظ الأستاذ</button>
     </form>
-  </div>
 
-  <!-- التقرير المالي -->
-  <div style="flex:1;min-width:300px;">
-    <strong>التقرير المالي</strong>
-    <div style="margin-top:8px">
-      <p>مجموع الأقساط: <span id="totalFees">0</span></p>
-      <p>مجموع الدفعات: <span id="totalPaid">0</span></p>
-      <p>المتبقي على المعهد: <span id="totalRemaining">0</span></p>
+    <div class="filters">
+      <select id="filterStage">
+        <option value="">تصفية حسب المرحلة</option>
+        <option>الابتدائية</option>
+        <option>المتوسطة</option>
+        <option>الاعدادية - علمي</option>
+        <option>الاعدادية - أدبي</option>
+      </select>
+      <button id="printTeachers" class="print-btn">🖨️ طباعة القائمة</button>
     </div>
+
+    <table id="teachersTable">
+      <thead>
+        <tr>
+          <th>الاسم</th>
+          <th>المادة</th>
+          <th>المرحلة</th>
+          <th>الهاتف</th>
+          <th>العنوان</th>
+          <th>إجراءات</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </div>
-</div>
 
-<!-- جدول الدفعات -->
-<div class="card" style="margin-top:12px">
-  <strong>دفعات الأستاذ</strong>
-  <table id="teacherPaymentsTable">
-    <thead>
-      <tr>
-        <th>المادة</th>
-        <th>المبلغ</th>
-        <th>تاريخ الدفع</th>
-        <th>خيارات</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
-</div>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+    import { 
+      getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc 
+    } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-</div>
+    const firebaseConfig = {
+      apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
+      authDomain: "oma2-d36fa.firebaseapp.com",
+      projectId: "oma2-d36fa",
+      storageBucket: "oma2-d36fa.appspot.com",
+      messagingSenderId: "774171603105",
+      appId: "1:774171603105:web:91f2a5f44c4dde684080e0"
+    };
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
-import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+    const teachersRef = collection(db, "teachers");
 
-const firebaseConfig = {
-  apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
-  authDomain: "oma2-d36fa.firebaseapp.com",
-  projectId: "oma2-d36fa",
-  storageBucket: "oma2-d36fa.appspot.com",
-  messagingSenderId: "774171603105",
-  appId: "1:774171603105:web:91f2a5f44c4dde684080e0"
-};
+    const addForm = document.getElementById("addTeacherForm");
+    const tableBody = document.querySelector("#teachersTable tbody");
+    const filterStage = document.getElementById("filterStage");
 
-const app = initializeApp(firebaseConfig);
-const auth = getAuth(app);
-const db = getFirestore(app);
+    // 📦 جلب الأساتذة
+    async function loadTeachers() {
+      tableBody.innerHTML = "";
+      const querySnapshot = await getDocs(teachersRef);
+      querySnapshot.forEach(docSnap => {
+        const teacher = docSnap.data();
+        addRow(docSnap.id, teacher);
+      });
+    }
 
-onAuthStateChanged(auth, (user)=>{
-  if(!user){ window.location.href="login.html"; } 
-  else{ document.body.style.visibility="visible"; loadTeachers(); }
-});
+    // 🧩 إضافة صف للجدول
+    function addRow(id, teacher) {
+      const tr = document.createElement("tr");
+      tr.innerHTML = `
+        <td>${teacher.name}</td>
+        <td>${teacher.subject}</td>
+        <td>${teacher.stage}</td>
+        <td>${teacher.phone}</td>
+        <td>${teacher.address || "-"}</td>
+        <td class="actions">
+          <button class="edit-btn" data-id="${id}">✏️ تعديل</button>
+          <button class="delete-btn" data-id="${id}">🗑️ حذف</button>
+        </td>
+      `;
+      tableBody.appendChild(tr);
+    }
 
-// عناصر الاستمارة
-const teacherForm=document.getElementById("teacherForm");
-const tSubjectsContainer=document.getElementById("tSubjectsContainer");
-const addTSubjectBtn=document.getElementById("addTSubjectBtn");
-const teacherPaymentsTable=document.querySelector("#teacherPaymentsTable tbody");
-let teachersData=[];
+    // ➕ إضافة أستاذ
+    addForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const teacher = {
+        name: document.getElementById("teacherName").value,
+        subject: document.getElementById("subject").value,
+        phone: document.getElementById("phone").value,
+        address: document.getElementById("address").value,
+        stage: document.getElementById("stage").value
+      };
+      await addDoc(teachersRef, teacher);
+      alert("✅ تم حفظ بيانات الأستاذ بنجاح");
+      addForm.reset();
+      loadTeachers();
+    });
 
-// إضافة مادة
-addTSubjectBtn.addEventListener("click",()=>{
-  const div=document.createElement("div");
-  div.style.display="flex"; div.style.gap="6px"; div.style.alignItems="center";
-  div.innerHTML=`
-    <input type="text" placeholder="اسم المادة" class="tSubjName" required/>
-    <button type="button" class="btn warn small removeSubjBtn">❌</button>
-  `;
-  tSubjectsContainer.appendChild(div);
-  div.querySelector(".removeSubjBtn").addEventListener("click",()=>{tSubjectsContainer.removeChild(div);});
-});
+    // 🗑️ حذف أستاذ
+    tableBody.addEventListener("click", async (e) => {
+      if (e.target.classList.contains("delete-btn")) {
+        const id = e.target.dataset.id;
+        if (confirm("هل أنت متأكد من حذف هذا الأستاذ؟")) {
+          await deleteDoc(doc(teachersRef, id));
+          loadTeachers();
+        }
+      } else if (e.target.classList.contains("edit-btn")) {
+        const id = e.target.dataset.id;
+        const row = e.target.closest("tr");
+        const name = prompt("اسم الأستاذ:", row.children[0].textContent);
+        const subject = prompt("المادة:", row.children[1].textContent);
+        const stage = prompt("المرحلة:", row.children[2].textContent);
+        const phone = prompt("الهاتف:", row.children[3].textContent);
+        const address = prompt("العنوان:", row.children[4].textContent);
+        if (name) {
+          await updateDoc(doc(teachersRef, id), { name, subject, stage, phone, address });
+          loadTeachers();
+        }
+      }
+    });
 
-// حفظ الأستاذ
-teacherForm.addEventListener("submit",async(e)=>{
-  e.preventDefault();
-  const name=document.getElementById("tName").value.trim();
-  const phone=document.getElementById("tPhone").value.trim();
-  const stages=document.getElementById("tStages").value.trim();
-  const groups=document.getElementById("tGroups").value.trim();
-  const subjects=[];
-  document.querySelectorAll(".tSubjName").forEach(s=>{ if(s.value.trim()) subjects.push({name:s.value.trim(),payments:[]}); });
-  if(subjects.length===0){ alert("أضف مادة واحدة على الأقل"); return;}
-  try{
-    await addDoc(collection(db,"teachers"),{name,phone,stages,groups,subjects,createdAt:new Date()});
-    alert("تم حفظ الأستاذ بنجاح");
-    teacherForm.reset(); tSubjectsContainer.innerHTML="";
-    loadTeachers();
-  }catch(err){console.error(err); alert("خطأ أثناء الحفظ");}
-});
+    // 🖨️ طباعة
+    document.getElementById("printTeachers").addEventListener("click", () => {
+      window.print();
+    });
 
-// تحميل الأساتذة
-async function loadTeachers(){
-  const snapshot=await getDocs(collection(db,"teachers"));
-  teacherPaymentsTable.innerHTML="";
-  teachersData=[];
-  let totalFees=0, totalPaid=0;
-  snapshot.forEach(docSnap=>{
-    const teacher={...docSnap.data(),id:docSnap.id};
-    teachersData.push(teacher);
-    teacher.subjects.forEach(sub=>{
-      sub.payments.forEach(p=>{
-        totalPaid+=p.amount;
-        totalFees+=p.total||0;
-        const tr=document.createElement("tr");
-        tr.innerHTML=`
-          <td>${sub.name}</td>
-          <td>${p.amount}</td>
-          <td>${p.date}</td>
-          <td>
-            <button class="btn warn small">❌ حذف</button>
-          </td>
-        `;
-        teacherPaymentsTable.appendChild(tr);
+    // 🔄 تصفية
+    filterStage.addEventListener("change", async () => {
+      const stage = filterStage.value;
+      tableBody.innerHTML = "";
+      const querySnapshot = await getDocs(teachersRef);
+      querySnapshot.forEach(docSnap => {
+        const teacher = docSnap.data();
+        if (!stage || teacher.stage === stage) addRow(docSnap.id, teacher);
       });
     });
-  });
-  document.getElementById("totalFees").innerText=totalFees;
-  document.getElementById("totalPaid").innerText=totalPaid;
-  document.getElementById("totalRemaining").innerText=totalFees-totalPaid;
-}
-</script>
+
+    loadTeachers();
+  </script>
 </body>
 </html>
