--- a/teachers.html
+++ b/teachers.html
@@ -1,254 +1,291 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>👨‍🏫 إدارة الأساتذة - نظام OMA</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>نظام OMA - إدارة الأساتذة</title>
 <style>
-  body {
-    font-family: 'Cairo', sans-serif;
-    background: #f5f9ff;
-    margin: 0;
-    padding: 0;
-  }
-  header {
-    background-color: #004aad;
-    color: white;
-    text-align: center;
-    padding: 15px 0;
-    font-size: 22px;
-    font-weight: bold;
-  }
-  .container {
-    padding: 20px;
-    max-width: 1100px;
-    margin: auto;
-  }
-  form {
-    background: white;
-    padding: 25px;
-    border-radius: 10px;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-    margin-bottom: 30px;
-  }
-  form h3 {
-    margin-top: 0;
-    color: #004aad;
-    text-align: center;
-  }
-  input, select {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border-radius: 8px;
-    border: 1px solid #ccc;
-    font-size: 15px;
-  }
-  button {
-    background: #004aad;
-    color: white;
-    border: none;
-    padding: 12px 18px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 15px;
-    transition: 0.3s;
-  }
-  button:hover {
-    background: #003580;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    background: white;
-    border-radius: 8px;
-    overflow: hidden;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-  }
-  th, td {
-    padding: 10px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-  }
-  th {
-    background: #004aad;
-    color: white;
-  }
-  tr:hover {
-    background: #eef4ff;
-  }
-  .actions button {
-    margin: 2px;
-  }
-  .print-btn {
-    background: #ffcc33;
-    color: #222;
-  }
-  .delete-btn {
-    background: #d32f2f;
-  }
-  .edit-btn {
-    background: #007bff;
-  }
-  .filters {
-    display: flex;
-    gap: 10px;
-    margin-bottom: 20px;
-  }
+:root{
+  --primary:#004aad;
+  --accent:#ffcc33;
+  --bg:#f5f9ff;
+  --card:#fff;
+}
+*{box-sizing:border-box;}
+body{
+  font-family:'Cairo',sans-serif;
+  margin:0;
+  background:var(--bg);
+  color:#102027;
+  direction:rtl;
+  visibility:hidden;
+}
+header{
+  background:var(--primary);
+  color:#fff;
+  padding:18px;
+  text-align:center;
+  font-size:20px;
+  font-weight:700;
+}
+.wrap{max-width:1200px;margin:22px auto;padding:12px;}
+.card{background:var(--card);border-radius:10px;padding:14px;box-shadow:0 6px 18px rgba(6,20,30,0.06);margin-bottom:16px;}
+input, select{padding:10px;border:1px solid #d6dde9;border-radius:8px;font-size:15px;width:100%;margin-bottom:8px;}
+label{display:block;margin-bottom:6px;font-size:13px;color:#37474f;}
+.btn{background:var(--primary);color:#fff;padding:10px 14px;border:none;border-radius:8px;cursor:pointer;font-weight:700;margin-bottom:8px;}
+.btn.warn{background:#ff7043;}
+.btn.ghost{background:transparent;color:var(--primary);border:1px solid rgba(0,74,173,0.12);}
+.btn.small{padding:6px 8px;font-size:13px;border-radius:6px;}
+.subject-field{display:flex;gap:6px;align-items:center;margin-bottom:6px;}
+table{width:100%;border-collapse:collapse;margin-top:12px;}
+th,td{padding:10px;border-bottom:1px solid #eee;text-align:center;font-size:14px;}
+th{background:var(--primary);color:#fff;}
+.actions button{margin:0 4px;}
+.badge{display:inline-block;padding:4px 8px;border-radius:999px;background:#eef6ff;color:var(--primary);font-weight:700;}
+.modal { position:fixed; left:0; top:0; right:0; bottom:0; background:rgba(0,0,0,0.45); display:none; align-items:center; justify-content:center; z-index:9999;}
+.modal.open{display:flex}
+.modal .box{background:white;padding:18px;border-radius:10px;max-width:720px;width:94%;max-height:90vh;overflow:auto}
+.flex{display:flex;gap:8px;align-items:center}
+.filters{display:flex;gap:10px;flex-wrap:wrap;margin-bottom:12px;}
+.filters select{flex:1;}
 </style>
 </head>
 <body>
-  <header>👨‍🏫 إدارة الأساتذة</header>
+<header>نظام OMA - إدارة الأساتذة</header>
+<div class="wrap">
 
-  <div class="container">
-    <form id="addTeacherForm">
-      <h3>➕ إضافة أستاذ جديد</h3>
-      <input type="text" id="teacherName" placeholder="اسم الأستاذ" required />
-      <input type="text" id="subject" placeholder="المادة الدراسية" required />
-      <input type="tel" id="phone" placeholder="رقم الهاتف" required />
-      <input type="text" id="address" placeholder="العنوان" />
-      <select id="stage" required>
-        <option value="">اختر المرحلة</option>
-        <option>الابتدائية</option>
-        <option>المتوسطة</option>
-        <option>الاعدادية - علمي</option>
-        <option>الاعدادية - أدبي</option>
-      </select>
-      <button type="submit">💾 حفظ الأستاذ</button>
-    </form>
-
-    <div class="filters">
-      <select id="filterStage">
-        <option value="">تصفية حسب المرحلة</option>
-        <option>الابتدائية</option>
-        <option>المتوسطة</option>
-        <option>الاعدادية - علمي</option>
-        <option>الاعدادية - أدبي</option>
-      </select>
-      <button id="printTeachers" class="print-btn">🖨️ طباعة القائمة</button>
+<!-- إضافة أستاذ -->
+<div class="card">
+  <strong>أضف أستاذ جديد</strong>
+  <form id="teacherForm">
+    <label>الاسم الكامل</label>
+    <input id="name" type="text" required>
+    <label>رقم الموبايل</label>
+    <input id="phone" type="tel" required>
+    <label>العنوان</label>
+    <input id="address" type="text">
+    <label>المرحلة الدراسية</label>
+    <select id="stage">
+      <option value="">اختر المرحلة</option>
+      <option>الأول ابتدائي</option>
+      <option>الثاني ابتدائي</option>
+      <option>الثالث ابتدائي</option>
+      <option>الرابع ابتدائي</option>
+      <option>الخامس ابتدائي</option>
+      <option>السادس ابتدائي</option>
+      <option>الأول إعدادي علمي</option>
+      <option>الأول إعدادي أدبي</option>
+      <option>الثاني إعدادي علمي</option>
+      <option>الثاني إعدادي أدبي</option>
+      <option>الثالث إعدادي علمي</option>
+      <option>الثالث إعدادي أدبي</option>
+      <option>الرابع إعدادي علمي</option>
+      <option>الرابع إعدادي أدبي</option>
+      <option>الخامس إعدادي علمي</option>
+      <option>الخامس إعدادي أدبي</option>
+      <option>السادس إعدادي علمي</option>
+      <option>السادس إعدادي أدبي</option>
+    </select>
+    <label>الكروب</label>
+    <select id="group">
+      <option value="">اختر الكروب</option>
+      <option>A</option><option>B</option><option>C</option>
+      <option>D</option><option>E</option><option>F</option>
+      <option>G</option><option>H</option>
+    </select>
+    <div>
+      <label>المواد</label>
+      <div id="subjectsContainer"></div>
+      <button type="button" id="addSubjectBtn" class="btn ghost small">➕ إضافة مادة</button>
     </div>
+    <label>إجمالي المستحقات من المعهد</label>
+    <input id="totalFees" type="number" min="0">
+    <label>ملاحظات</label>
+    <input id="note" type="text">
+    <div style="display:flex;gap:8px;justify-content:flex-end;margin-top:8px">
+      <button type="submit" class="btn">✅ حفظ الأستاذ</button>
+      <button type="button" id="clearFormBtn" class="btn ghost">مسح الحقول</button>
+    </div>
+  </form>
+</div>
 
-    <table id="teachersTable">
-      <thead>
-        <tr>
-          <th>الاسم</th>
-          <th>المادة</th>
-          <th>المرحلة</th>
-          <th>الهاتف</th>
-          <th>العنوان</th>
-          <th>إجراءات</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+<!-- قائمة الأساتذة -->
+<div class="card">
+  <strong>قائمة الأساتذة</strong>
+  <div class="filters">
+    <select id="filterStage"><option value="">فلترة حسب المرحلة</option></select>
+    <select id="filterGroup"><option value="">فلترة حسب الكروب</option></select>
+    <select id="filterSubject"><option value="">فلترة حسب المادة</option></select>
+    <button id="printListBtn" class="btn small">🖨️ طباعة القائمة</button>
   </div>
+  <table id="teachersTable">
+    <thead>
+      <tr>
+        <th>الاسم</th>
+        <th>الهاتف</th>
+        <th>المرحلة</th>
+        <th>الكروب</th>
+        <th>المواد</th>
+        <th>المستحقات</th>
+        <th>خيارات</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</div>
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
-    import { 
-      getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc 
-    } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+<!-- نافذة التفاصيل والدفعات -->
+<div id="modal" class="modal" aria-hidden="true">
+  <div class="box">
+    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:10px">
+      <strong id="modalTitle">تفاصيل الأستاذ</strong>
+      <button id="closeModal" class="btn ghost">إغلاق</button>
+    </div>
+    <div id="modalBody"></div>
+    <div style="text-align:center;margin-top:12px">
+      <button id="printTeacherBtn" class="btn">🖨️ طباعة الاستمارة</button>
+    </div>
+  </div>
+</div>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
-      authDomain: "oma2-d36fa.firebaseapp.com",
-      projectId: "oma2-d36fa",
-      storageBucket: "oma2-d36fa.appspot.com",
-      messagingSenderId: "774171603105",
-      appId: "1:774171603105:web:91f2a5f44c4dde684080e0"
-    };
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
+import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, updateDoc } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
 
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
-    const teachersRef = collection(db, "teachers");
+const firebaseConfig = {
+  apiKey: "API_KEY_HERE",
+  authDomain: "PROJECT_ID.firebaseapp.com",
+  projectId: "PROJECT_ID",
+  storageBucket: "PROJECT_ID.appspot.com",
+  messagingSenderId: "SENDER_ID",
+  appId: "APP_ID"
+};
 
-    const addForm = document.getElementById("addTeacherForm");
-    const tableBody = document.querySelector("#teachersTable tbody");
-    const filterStage = document.getElementById("filterStage");
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
 
-    // 📦 جلب الأساتذة
-    async function loadTeachers() {
-      tableBody.innerHTML = "";
-      const querySnapshot = await getDocs(teachersRef);
-      querySnapshot.forEach(docSnap => {
-        const teacher = docSnap.data();
-        addRow(docSnap.id, teacher);
-      });
+const teacherForm = document.getElementById("teacherForm");
+const teachersTableBody = document.querySelector("#teachersTable tbody");
+const subjectsContainer = document.getElementById("subjectsContainer");
+const addSubjectBtn = document.getElementById("addSubjectBtn");
+let teachersData = [];
+
+addSubjectBtn.addEventListener("click",()=>{
+  const div = document.createElement("div");
+  div.classList.add("subject-field");
+  div.innerHTML = `
+    <input type="text" placeholder="اسم المادة" class="subjName" required />
+    <input type="number" placeholder="إجمالي المستحقات" class="subjFee" min="0" />
+    <button type="button" class="btn small addPaymentBtn">💰 دفعة</button>
+    <button type="button" class="btn warn small removeSubjBtn">❌</button>
+  `;
+  subjectsContainer.appendChild(div);
+  
+  div.querySelector(".removeSubjBtn").addEventListener("click",()=>subjectsContainer.removeChild(div));
+  
+  div.querySelector(".addPaymentBtn").addEventListener("click",()=>{
+    const payment = prompt("أدخل مبلغ الدفعة:");
+    if(payment && !isNaN(payment)){
+      const date = new Date().toLocaleDateString();
+      if(!div.payments) div.payments=[];
+      div.payments.push({amount:parseFloat(payment),date});
+      const feeInput = div.querySelector(".subjFee");
+      const remaining = parseFloat(feeInput.value) - parseFloat(payment);
+      feeInput.value = remaining>=0?remaining:0;
+      alert(`تم تسجيل الدفعة ${payment} بتاريخ ${date}`);
     }
+  });
+});
 
-    // 🧩 إضافة صف للجدول
-    function addRow(id, teacher) {
-      const tr = document.createElement("tr");
-      tr.innerHTML = `
-        <td>${teacher.name}</td>
-        <td>${teacher.subject}</td>
-        <td>${teacher.stage}</td>
-        <td>${teacher.phone}</td>
-        <td>${teacher.address || "-"}</td>
-        <td class="actions">
-          <button class="edit-btn" data-id="${id}">✏️ تعديل</button>
-          <button class="delete-btn" data-id="${id}">🗑️ حذف</button>
-        </td>
-      `;
-      tableBody.appendChild(tr);
-    }
-
-    // ➕ إضافة أستاذ
-    addForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const teacher = {
-        name: document.getElementById("teacherName").value,
-        subject: document.getElementById("subject").value,
-        phone: document.getElementById("phone").value,
-        address: document.getElementById("address").value,
-        stage: document.getElementById("stage").value
-      };
-      await addDoc(teachersRef, teacher);
-      alert("✅ تم حفظ بيانات الأستاذ بنجاح");
-      addForm.reset();
-      loadTeachers();
-    });
-
-    // 🗑️ حذف أستاذ
-    tableBody.addEventListener("click", async (e) => {
-      if (e.target.classList.contains("delete-btn")) {
-        const id = e.target.dataset.id;
-        if (confirm("هل أنت متأكد من حذف هذا الأستاذ؟")) {
-          await deleteDoc(doc(teachersRef, id));
-          loadTeachers();
-        }
-      } else if (e.target.classList.contains("edit-btn")) {
-        const id = e.target.dataset.id;
-        const row = e.target.closest("tr");
-        const name = prompt("اسم الأستاذ:", row.children[0].textContent);
-        const subject = prompt("المادة:", row.children[1].textContent);
-        const stage = prompt("المرحلة:", row.children[2].textContent);
-        const phone = prompt("الهاتف:", row.children[3].textContent);
-        const address = prompt("العنوان:", row.children[4].textContent);
-        if (name) {
-          await updateDoc(doc(teachersRef, id), { name, subject, stage, phone, address });
-          loadTeachers();
-        }
-      }
-    });
-
-    // 🖨️ طباعة
-    document.getElementById("printTeachers").addEventListener("click", () => {
-      window.print();
-    });
-
-    // 🔄 تصفية
-    filterStage.addEventListener("change", async () => {
-      const stage = filterStage.value;
-      tableBody.innerHTML = "";
-      const querySnapshot = await getDocs(teachersRef);
-      querySnapshot.forEach(docSnap => {
-        const teacher = docSnap.data();
-        if (!stage || teacher.stage === stage) addRow(docSnap.id, teacher);
-      });
-    });
-
+teacherForm.addEventListener("submit", async(e)=>{
+  e.preventDefault();
+  const name = document.getElementById("name").value.trim();
+  const phone = document.getElementById("phone").value.trim();
+  const address = document.getElementById("address").value.trim();
+  const stage = document.getElementById("stage").value;
+  const group = document.getElementById("group").value;
+  const totalFees = parseFloat(document.getElementById("totalFees").value)||0;
+  const note = document.getElementById("note").value.trim();
+  
+  const subjects = [];
+  document.querySelectorAll(".subject-field").forEach(sub=>{
+    const subjName = sub.querySelector(".subjName").value.trim();
+    const subjFee = parseFloat(sub.querySelector(".subjFee").value)||0;
+    const payments = sub.payments||[];
+    if(subjName) subjects.push({name:subjName,fee:subjFee,payments});
+  });
+  
+  if(subjects.length===0){ alert("أضف مادة واحدة على الأقل"); return;}
+  
+  try{
+    await addDoc(collection(db,"teachers"),{name,phone,address,stage,group,totalFees,note,subjects,createdAt:new Date()});
+    alert("تم حفظ الأستاذ بنجاح");
+    teacherForm.reset();
+    subjectsContainer.innerHTML="";
     loadTeachers();
-  </script>
+  }catch(err){console.error(err);alert("حدث خطأ أثناء الحفظ");}
+});
+
+async function loadTeachers(){
+  const snapshot = await getDocs(collection(db,"teachers"));
+  teachersTableBody.innerHTML="";
+  teachersData=[];
+  const stagesSet = new Set(), groupsSet = new Set(), subjectsSet = new Set();
+  snapshot.forEach(docSnap=>{
+    const t = {...docSnap.data(),id:docSnap.id};
+    teachersData.push(t);
+    if(t.stage) stagesSet.add(t.stage);
+    if(t.group) groupsSet.add(t.group);
+    t.subjects.forEach(s=>subjectsSet.add(s.name));
+    
+    const tr = document.createElement("tr");
+    tr.innerHTML = `
+      <td>${t.name}</td>
+      <td>${t.phone}</td>
+      <td>${t.stage}</td>
+      <td>${t.group}</td>
+      <td>${t.subjects.map(s=>`${s.name} (المتبقي:${s.fee})`).join("<br>")}</td>
+      <td>${t.totalFees}</td>
+      <td class="actions">
+        <button class="btn small" onclick="showTeacher('${t.id}')">🔍 التفاصيل</button>
+        <button class="btn warn small" onclick="deleteTeacher('${t.id}')">🗑️ حذف</button>
+      </td>
+    `;
+    teachersTableBody.appendChild(tr);
+  });
+  // إعداد الفلاتر
+  const fs=document.getElementById("filterStage"); fs.innerHTML="<option value=''>فلترة حسب المرحلة</option>"; stagesSet.forEach(s=>fs.innerHTML+=`<option>${s}</option>`);
+  const fg=document.getElementById("filterGroup"); fg.innerHTML="<option value=''>فلترة حسب الكروب</option>"; groupsSet.forEach(g=>fg.innerHTML+=`<option>${g}</option>`);
+  const fsub=document.getElementById("filterSubject"); fsub.innerHTML="<option value=''>فلترة حسب المادة</option>"; subjectsSet.forEach(s=>fsub.innerHTML+=`<option>${s}</option>`);
+  document.body.style.visibility="visible";
+}
+
+window.deleteTeacher = async function(id){
+  if(confirm("هل تريد حذف الأستاذ؟")){
+    await deleteDoc(doc(db,"teachers",id));
+    loadTeachers();
+  }
+}
+
+window.showTeacher = function(id){
+  const t = teachersData.find(x=>x.id===id);
+  if(!t) return;
+  const modal = document.getElementById("modal");
+  const body = document.getElementById("modalBody");
+  body.innerHTML=`<h3>${t.name}</h3>
+    <p>الهاتف: ${t.phone}</p>
+    <p>المرحلة: ${t.stage}</p>
+    <p>الكروب: ${t.group}</p>
+    <p>العنوان: ${t.address}</p>
+    <p>ملاحظات: ${t.note}</p>
+    <h4>المواد والمستحقات:</h4>
+    ${t.subjects.map(s=>{
+      return `<b>${s.name}</b> - المستحق: ${s.fee}<br>الدفعات:<br>${s.payments.map(p=>p.amount+" بتاريخ "+p.date).join("<br>")}`;
+    }).join("<hr>")}`;
+  modal.classList.add("open");
+}
+
+document.getElementById("closeModal").addEventListener("click",()=>{document.getElementById("modal").classList.remove("open")});
+</script>
 </body>
 </html>
