--- a/login.html
+++ b/login.html
@@ -88,14 +88,15 @@ footer {
     onAuthStateChanged
   } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
+  // 🔹 إعدادات مشروعك الجديد
   const firebaseConfig = {
-    apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
-    authDomain: "oma2-d36fa.firebaseapp.com",
-    projectId: "oma2-d36fa",
-    storageBucket: "oma2-d36fa.firebasestorage.app",
-    messagingSenderId: "774171603105",
-    appId: "1:774171603105:web:91f2a5f44c4dde684080e0",
-    measurementId: "G-QHPZG4JLB8"
+    apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
+    authDomain: "oma0-33cc0.firebaseapp.com",
+    projectId: "oma0-33cc0",
+    storageBucket: "oma0-33cc0.firebasestorage.app",
+    messagingSenderId: "899300774863",
+    appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
+    measurementId: "G-5CKWYQT9XZ"
   };
 
   const app = initializeApp(firebaseConfig);
@@ -109,8 +110,8 @@ footer {
   // ✅ تحقق إذا المستخدم مسجل دخول مسبقاً
   onAuthStateChanged(auth, (user) => {
     if (user) {
-      console.log("🔹 المستخدم مازال مسجلاً الدخول:", user.email);
-      window.location.href = "dashboard.html";
+      console.log("🔹 المستخدم مسجّل الدخول:", user.email);
+      window.location.href = "dashboard.html"; // تعديل المسار إذا لزم
     }
   });
 
