--- a/dashboard.html
+++ b/dashboard.html
@@ -84,14 +84,15 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
 
-    // 🔹 إعداد Firebase
+    // 🔹 إعداد Firebase الجديد
     const firebaseConfig = {
-      apiKey: "AIzaSyDt2HAOKr3iko8V-u392vh2R2my14km7ag",
-      authDomain: "oma2-d36fa.firebaseapp.com",
-      projectId: "oma2-d36fa",
-      storageBucket: "oma2-d36fa.appspot.com",
-      messagingSenderId: "774171603105",
-      appId: "1:774171603105:web:91f2a5f44c4dde684080e0"
+      apiKey: "AIzaSyAMANgdrLgoGIjqLZOcS_qyEqCUOVC7gOU",
+      authDomain: "oma0-33cc0.firebaseapp.com",
+      projectId: "oma0-33cc0",
+      storageBucket: "oma0-33cc0.firebasestorage.app",
+      messagingSenderId: "899300774863",
+      appId: "1:899300774863:web:0a81a7f5747ef37d49b8ba",
+      measurementId: "G-5CKWYQT9XZ"
     };
 
     const app = initializeApp(firebaseConfig);
@@ -111,7 +112,7 @@
       classesCard: "classes.html",
       attendanceCard: "attendance.html",
       settingsCard: "settings.html",
-      financeCard: "finance.html" // تأكد أن هذا الملف موجود في نفس المجلد
+      financeCard: "finance.html"
     };
 
     Object.keys(pageLinks).forEach(id => {
